feat: Add iOS portability support

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ProxyOffice</title>
   <link rel="stylesheet" href="styles/app.css">
 </head>
+
 <body>
   <!-- Letterboxed Game Container -->
   <div id="game-container">
@@ -19,6 +21,8 @@
     </div>
   </div>
 
+  <script src="src/dialogue_system.js"></script>
   <script src="src/engine.js"></script>
 </body>
+
 </html>
