fix: corrected dialogue choices container ID in index.html to render dialogue buttons properly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="ui-layer">
       <div id="dialogue-box" class="hidden">
         <div id="dialogue-text"></div>
-        <div id="dialogue-options"></div>
+        <div id="dialogue-choices"></div>
       </div>
       <div id="inventory-bar"></div>
 
