feat(ui): implement custom hover tooltip for detailed 'look' descriptions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="dialogue-text"></div>
         <div id="dialogue-choices"></div>
       </div>
+      <div id="custom-tooltip" class="hidden"></div>
       <div id="inventory-bar"></div>
 
       <!-- Minigame Overlay (Hidden by default) -->
